--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
          , I'm 20, I'm from Port said ,
           I'm in <abbr title="faculty of computer & informatics suez canal university" style="color: rgb(17, 255, 0);">FCI SCU</abbr> , I'm in CS department,
         my fav field is flutter & Web development, I hope to visit the whole world.  </p>
+        <br>
+        <iframe src="https://quran.ksu.edu.sa/index.php?l=ar" style="min-width:1000px;width:100%;height:890px;border:none;overflow:hidden"></iframe>
         
         <section class="foot">
         
